XML 8.12.25 Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.12.25.

--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
@@ -632,23 +632,23 @@ Voit myös lisätä muistutuksia, jotta et menetä mitään tärkeää."</string
   <string name="too_long_name">Nimi on liian pitkä</string>
   <string name="train_detail_title">火车行程</string>
   <string name="train_event_add_arrive_station">Lisää määränpää napauttamalla</string>
-  <string name="train_event_arrive">%1$s saavu</string>
-  <string name="train_event_arrive_station_saved">Saapuva asema tallennettu</string>
-  <string name="train_event_choose_arrive_station">Valitse saapuva asema</string>
+  <string name="train_event_arrive">Saapuu klo %1$s</string>
+  <string name="train_event_arrive_station_saved">Tallennettiin määränpää onnistuneesti</string>
+  <string name="train_event_choose_arrive_station">Valitse määränpää</string>
   <string name="train_event_delete_successfully">火车行程删除成功</string>
-  <string name="train_event_depart">%1$s lähde</string>
-  <string name="train_event_disclaimer">Vastuuvapauslauseke: tiedot ja palvelun tarjoaa GaoTieGuanJia. Jos havaitset ongelmia, konsultoi yhtiön asiakaspalvelua. Junainformaatio on viitteellistä, tutustu virallisiin tietoihin.</string>
-  <string name="train_event_error_toast">Lataaminen epäonnistui!</string>
-  <string name="train_event_error_train_info">Junalipussa on virhe.</string>
+  <string name="train_event_depart">Lähtee klo %1$s</string>
+  <string name="train_event_disclaimer">Vastuuvapauslauseke: Kaikki junista ja palveluista saadut tiedot tarjoaa rautatieyhtiö. Ole yhteydessä rautatieyhtiön asiakaspalveluun, jos sinulla on jotain kysyttävää. Junatiedot ovat vain viitteellisiä. Tutustu rautatieyhtiön virallisiin verkkosivuihin uusimpien päivityksien ja tietojen saamiseksi.</string>
+  <string name="train_event_error_toast">Tietoja ei voitu ladata</string>
+  <string name="train_event_error_train_info">Lippua ei voitu vahvistaa</string>
   <string name="train_event_more_info">Aikataulu, Wi-Fi, jne.</string>
-  <string name="train_event_reminder">%1$s</string>
-  <string name="train_event_service">Junapalvelu</string>
+  <string name="train_event_reminder">Muistuta %1$s etukäteen</string>
+  <string name="train_event_service">Junapalvelut</string>
   <string name="train_event_station_date_format">d.M.</string>
   <string name="train_event_station_header_arrive_time">Saapuu</string>
   <string name="train_event_station_header_depart_time">Lähtee</string>
-  <string name="train_event_station_header_name">Aseman nimi</string>
-  <string name="train_event_station_header_stay_time">Odottaa</string>
-  <string name="train_event_station_stay_time">%1$s minuuttia</string>
+  <string name="train_event_station_header_name">Asema</string>
+  <string name="train_event_station_header_stay_time">Pysähtymisaika</string>
+  <string name="train_event_station_stay_time">%1$s min</string>
   <string name="train_event_station_time_format">HH:mm</string>
   <string name="travel_airport">Lentokenttä</string>
   <string name="travel_carriage_number_text">Auto</string>
