--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -235,6 +235,9 @@ Muotokuvatilassa"</string>
   <string name="live_error_message">Toimintovirhe</string>
   <string name="live_error_title">Toimintovirhe</string>
   <string name="live_music_change_bgm">Korvaa Musiikki</string>
+  <string name="live_music_close_cancel_message">Peruuta</string>
+  <string name="live_music_close_message">Suljetaanko nykyinen musiikki?</string>
+  <string name="live_music_close_sure_message">Sulje</string>
   <string name="live_music_downloading_tips">Ladataan...</string>
   <string name="live_music_hot_title">Kuumaa Musiikkia</string>
   <string name="live_music_local_title">Paikallinen Musiikki</string>
