--- a/Finnish/main/MiuiCompass.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCompass.apk/res/values-fi-rFI/strings.xml
@@ -22,6 +22,7 @@
   <string name="calibrate_title">Kalibroi kompassi</string>
   <string name="cancel">Peruuta</string>
   <string name="cannot_get_location">--</string>
+  <string name="compass_settings">Asetukset</string>
   <string name="dialog_body_no_network">Yhdistä Wi-Fi-verkkoon tai ota mobiilidata käyttöön</string>
   <string name="dialog_calibrat_altitude">Kalibroidaan…</string>
   <string name="dialog_title_no_network">Verkkoyhteyttä ei voitu muodostaa</string>
